<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signal_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blurb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/preferences__passphrase_lock"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            android:textSize="@dimen/onboarding_title_size" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:scaleType="fitCenter"
                android:src="@drawable/circle_tintable" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:tint="@color/signal_primary"
                app:srcCompat="@drawable/ic_lock" />
        </FrameLayout>

        <TextView
            android:id="@+id/subblurb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/create_passphrase_activity__now_you_can_set_a_passphrase_to_encrypt_the_database"
            android:textColor="@color/core_white"
            android:textIsSelectable="false"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/create_passphrase_activity__require_passphrase_to_unlock_molly"
            android:textColor="@color/core_white"
            android:textIsSelectable="false"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/create_passphrase_activity__turn_on_database_encryption"
            android:textColor="@color/signal_primary"
            app:backgroundTint="@color/core_white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/RatingManager_no_thanks"
            android:textColor="@color/transparent_white_80"
            app:backgroundTint="@color/signal_primary_dark" />

    </LinearLayout>
</ScrollView>
