<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025 Signal Messenger, LLC
  ~ SPDX-License-Identifier: AGPL-3.0-only
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAutofill="noExcludeDescendants"
    android:orientation="vertical"
    android:padding="15dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ChangePassphraseDialogFragment_duress_code_passphrase_dialog_content_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_passphrase_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_passphrase_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_passphrase_activity__new_passphrase"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_passphrase_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_passphrase_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_passphrase_activity__repeat_new_passphrase"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/ChangePassphraseDialogFragment_generating_keys_this_may_take_a_while" />
    </LinearLayout>

</LinearLayout>
